<resources>
    <string name="app_name">ACME Explorer</string>
    <string name="app_title">ACME Explorer</string>

    <string name="credits_text">Made with ♥ by Andrés Martínez\n(2021) Tecnologías móviles</string>
    <string name="columns_text">Columnas</string>
    <string name="search_text">Buscar</string>
    <string name="travel_list_text">Lista de viajes</string>
    <string name="start_date">Inicio: %1$s</string>
    <string name="end_date">Final: %1$s</string>
    <string name="price">Precio: %1$d€</string>
    <string name="pay">Pagar</string>
    <string name="start_place">Lugar: %1$s</string>
    <string name="filter_text">Filtrar viajes</string>
    <string name="start_date_filter">Fecha de inicio:</string>
    <string name="end_date_filter">Fecha de regreso:</string>
    <string name="my_travels">Mis viajes</string>
    <string name="minimum_price">Precio mínimo:</string>
    <string name="max_price">Precio máximo:</string>
    <string name="deleteText">Borrar</string>
    <string name="loginText">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="registerText">Registrarse</string>
    <string name="google_login">Inicio de sesión con Google</string>
    <string name="github_login">Inicio de sesión con GitHub</string>
    <string name="repeatPassword">Repite la contraseña</string>
    <string name="wrongCredentials">Las credenciales introducidas son incorrectas</string>
    <string name="requiredText">Este campo es obligatorio</string>
    <string name="registerError">Ha ocurrido un error en el registro</string>
    <string name="passwordsDontMatch">Las contraseñas no coinciden</string>
    <string name="passwordMinLength">La longitud mínima es de 6 caracteres</string>
    <string name="loginError">Ha ocurrido un error iniciando sesión</string>
    <string name="userCollision">Este usuario ya ha sido registrado con otro proveedor</string>
    <string name="emailVerificationQuestion">Esta cuenta no ha sido verificada. ¿Quieres que te enviemos un correo de confirmación?</string>
    <string name="yes">Sí</string>
    <string name="verificationMailSent">Se ha enviado el correo de verificación</string>
    <string name="verificationMailNotSent">Ha ocurrido un error enviando el correo de verificación</string>
    <string name="no">No</string>
    <string name="addTravel">Añadir viaje</string>
    <string name="newTravel">Nuevo viaje</string>
    <string name="priceText">Precio</string>
    <string name="startPlaceText">Lugar de inicio</string>
    <string name="destinyText">Destino</string>
    <string name="destinyEmpty">El destino está vacío</string>
    <string name="priceEmpty">El precio está vacío</string>
    <string name="startPlaceEmpty">El lugar de inicio está vacío</string>
    <string name="atLeastOneImage">Debe haber al menos una imagen</string>
    <string name="selectImageText">Selecciona una imagen</string>
    <string name="noExplorerFound">No se ha encontrado un gestor de archivos en tu dispositivo</string>
    <string name="travelCreationError">Ha ocurrido un error creando el viaje</string>
    <string name="temperatureText">Temperatura: %1$.2f ºC</string>
    <string name="pressureText">Presión: %1$.2f bar</string>
    <string name="humidityText">Humedad: %1$d %%</string>
    <string name="windSpeedText">Viento: %1$.2f km/h</string>
    <string name="distanceText">A %1$s km</string>
    <string name="validation_priceRange">El rango de precios no es coherente</string>
    <string name="locationPermissionText">Esta aplicación puede usar tu ubicación para mostrarla y visualizar la distancia a los viajes. ¿Quieres permitir su uso para este fin?</string>
    <string name="loadingDistance">Cargando distancia</string>
    <string name="selectedTravels">Hay %1$d viajes seleccionados</string>
    <string name="noSelectedTravels">No hay viajes seleccionados</string>
    <string name="errorGettingTravels">Ha ocurrido un error obteniendo los viajes</string>
    <string name="selectText">Seleccionar</string>
    <string name="buyText">Comprar</string>
    <string name="removeText">Eliminar</string>
    <string name="buyTimeText">Ha llegado el momento de la compra</string>
    <string name="weatherError">No se ha podido obtener la información meteorológica</string>
    <string name="serverEmptyResponse">El servidor ha respondido sin datos</string>
    <string name="imageDownloadError">No se ha podido descargar una imagen</string>
    <string name="fileUploadError">No se ha podido subir un archivo</string>
</resources>