<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.TravelListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_search"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/search_text" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/column_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/columns_text" />
    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/green_500"
        android:text="@string/addTravel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/text_color"
        android:textSize="48sp"
        android:text="@string/travel_list_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/travel_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1"
        tools:listitem="@layout/travel_item" >

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>