<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_color"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        app:cardBackgroundColor="@color/card_color"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardUseCompatPadding="true"
        android:clipChildren="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/travelImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingStart="10dp"
                android:contentDescription="Menu icon"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/travel_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Travel Title"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/travel_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/menu_text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/travel_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/menu_text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/travel_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/menu_text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distanceText"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/menu_text_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:buttonTint="@color/purple_700" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>